--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Hongqi H9 3D Car Model R3f">
   <meta property="og:description" content="">
   <meta property="og:image"
-    content="/pp.png">
+    content="./pp.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
   <meta property="twitter:title" content="Hongqi H9 3D Car Model R3f">
   <meta property="twitter:description" content="">
   <meta property="twitter:image"
-    content="/pp.png">
+    content="./pp.png">
 </head>
 
 <body>
